--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "softtektest",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@types/socket.io-client": "^1.4.36",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
